--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
                 grid-template-columns: 1fr;
             }
         }
+        @media (max-width: 768px) {
+    table, th, td {
+        font-size: 12px;
+        padding: 6px;
+    }
+}@media (max-width: 480px) {
+    table, th, td {
+        font-size: 11px;
+        padding: 4px;
+    }
+}
+
+
     </style>
 </head>
 <body>
