--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     
     <!-- NEW: Current Price Display -->
     <div class="current-price-display">
-        Current Price (15m): <span id="ema-current-price" class="price-value">--</span>
+     <span id="ema-current-price" class="price-value">--</span>
     </div>
     
     <p class="ema-last-updated">Last Updated: <span id="ema-last-updated-time">--</span></p>
