--- a/index.html
+++ b/index.html
@@ -188,11 +188,26 @@
                 <div><label for="sr-lookback">Lookback:</label><select id="sr-lookback"><option value="60d">60 Days</option><option value="30d">30 Days</option><option value="21d">21 Days</option><option value="14d">14 Days</option><option value="7d">7 Days</option></select></div>
             </div>
             <p class="ema-last-updated">Last Updated: <span id="sr-last-updated-time">--</span></p>
-            <div id="sr-metadata-container">
-                <div class="metadata-item"><span class="metadata-label">Lookback Period</span><span id="sr-metadata-dates" class="metadata-value">--</span></div>
-                <div class="metadata-item"><span class="metadata-label">Timeframes Analyzed</span><span id="sr-metadata-timeframes" class="metadata-value">--</span></div>
-                <div class="metadata-item"><span class="metadata-label">Pivot Windows</span><span id="sr-metadata-windows" class="metadata-value">--</span></div>
-            </div>
+<div id="sr-metadata-container">
+    <div class="metadata-item">
+        <span class="metadata-label">Lookback Period</span>
+        <span id="sr-metadata-dates" class="metadata-value">--</span>
+    </div>
+    <div class="metadata-item">
+        <span class="metadata-label">Timeframes Analyzed</span>
+        <span id="sr-metadata-timeframes" class="metadata-value">--</span>
+    </div>
+    <div class="metadata-item">
+        <span class="metadata-label">Pivot Windows</span>
+        <span id="sr-metadata-windows" class="metadata-value">--</span>
+    </div>
+    
+    <!-- ADD THE NEW HARDCODED ITEM HERE -->
+    <div class="metadata-item">
+        <span class="metadata-label">Pivot Sources</span>
+        <span class="metadata-value">Wick High, Wick Low, Close High, Close Low</span>
+    </div>
+</div>
             <div id="sr-levels-container">
                 <div class="sr-column support"><h3>Top Support Zones</h3><div id="support-levels-container"></div></div>
                 <div class="sr-column resistance"><h3>Top Resistance Zones</h3><div id="resistance-levels-container"></div></div>
