--- a/index.html
+++ b/index.html
@@ -612,7 +612,12 @@
             
             dateButtonsContainer.addEventListener('click', (e) => {
                 if (e.target.matches('.date-nav-btn')) {
-                    selectedDate = new Date(e.target.dataset.date + 'T00:00:00');
+                    const dateStr = e.target.dataset.date; // e.g., "2025-07-20"
+const parts = dateStr.split('-');
+const year = parseInt(parts[0], 10);
+const month = parseInt(parts[1], 10) - 1; // JS months are 0-11
+const day = parseInt(parts[2], 10);
+selectedDate = new Date(Date.UTC(year, month, day));
                     renderDateNavigation();
                     updateJournalView();
                 }
