--- a/index.html
+++ b/index.html
@@ -281,6 +281,11 @@
                 <div class="metadata-item"><span class="metadata-label">Lookback Period</span><span id="sr-metadata-dates" class="metadata-value">--</span></div>
                 <div class="metadata-item"><span class="metadata-label">Timeframes Analyzed</span><span id="sr-metadata-timeframes" class="metadata-value">--</span></div>
                 <div class="metadata-item"><span class="metadata-label">Pivot Windows</span><span id="sr-metadata-windows" class="metadata-value">--</span></div>
+                   <!-- <<< ADD THIS NEW DIV FOR THE WEIGHTS >>> -->
+    <div class="metadata-item">
+        <span class="metadata-label">Timeframe Weights</span>
+        <span class="metadata-value">15m: 1.0x | 30m: 1.2x | 1h: 1.5x | 2h: 2.0x | 4h: 2.5x</span>
+    </div>
                 <div class="metadata-item"><span class="metadata-label">Pivot Sources</span><span class="metadata-value">Wick High, Wick Low, Close High, Close Low</span></div>
             </div>
             <div id="sr-levels-container">
