--- a/index.html
+++ b/index.html
@@ -332,7 +332,11 @@
                 <div class="metadata-item"><span class="metadata-label">Timeframes Analyzed</span><span id="sr-metadata-timeframes" class="metadata-value">--</span></div>
                 <div class="metadata-item"><span class="metadata-label">Pivot Windows</span><span id="sr-metadata-windows" class="metadata-value">--</span></div>
                 <div class="metadata-item"><span class="metadata-label">Pivot Sources</span><span class="metadata-value">Wick High, Wick Low</span></div>
-                <div class="metadata-item"><span class="metadata-label">Strength Score</span><div class="rating-explanation"><span class="metadata-value">Sum of Pivot Window Strengths</span></div></div>
+                <div class="metadata-item"><span class="metadata-label">Strength Score</span><div class="rating-explanation"><span class="metadata-value">    '15m': 1.0,
+    '30m': 1.2,
+    '1h': 1.5,
+    '2h': 2.0,
+    '4h': 2.5</span></div></div>
             </div>
             <div id="sr-levels-container">
                 <div class="sr-column support"><h3>Top Support Zones</h3><div id="support-levels-container"></div></div>
