--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
         <div id="sr-levels-tab" class="tab-content">
             <div class="controls-container">
                 <div><label for="sr-symbol">Symbol:</label><select id="sr-symbol"><option value="BTC/USDT">BTC/USDT</option><option value="ETH/USDT">ETH/USDT</option></select></div>
-                <div><label for="sr-lookback">Lookback:</label><select id="sr-lookback"><option value="60d">60 Days</option><option value="30d">30 Days</option><option value="21d">21 Days</option><option value="14d">14 Days</option><option value="7d">7 Days</option>  <option value="3">3 Days</option> <!-- ADDED -->
-    <option value="2">2 Days</option></select></div>
+                <div><label for="sr-lookback">Lookback:</label><select id="sr-lookback"><option value="60d">60 Days</option><option value="30d">30 Days</option><option value="21d">21 Days</option><option value="14d">14 Days</option><option value="7d">7 Days</option>  <option value="3d">3 Days</option> <!-- ADDED -->
+    <option value="2d">2 Days</option></select></div>
             </div>
             <p class="ema-last-updated">Last Updated: <span id="sr-last-updated-time">--</span></p>
             <div id="sr-metadata-container">
